# memlog

./: README-ZH.md  README.md  pyproject.toml
src/memlog/: __init__.py  colorful.py  enums.py  model.py
tests/: test_main.py  test_not_main.py
